feat(backend inventory): add route to get full inventory of a property (with rooms and furnitures)
