# Code/Server/models/property.go
@@ -94,3 +94,97 @@ func DbPropertyToResponse(pc db.PropertyModel) PropertyResponse {
 	resp.FromDbProperty(pc)
 	return resp
 }
+
+type PropertyInventoryResponse struct {
+	ID                  string      `json:"id"`
+	OwnerID             string      `json:"owner_id"`
+	PictureID           *string     `json:"picture_id,omitempty"`
+	Name                string      `json:"name"`
+	Address             string      `json:"address"`
+	City                string      `json:"city"`
+	PostalCode          string      `json:"postal_code"`
+	Country             string      `json:"country"`
+	AreaSqm             float64     `json:"area_sqm"`
+	RentalPricePerMonth int         `json:"rental_price_per_month"`
+	DepositPrice        int         `json:"deposit_price"`
+	CreatedAt           db.DateTime `json:"created_at"`
+	Archived            bool        `json:"archived"`
+
+	// calculated fields
+	Status    string       `json:"status"`
+	NbDamage  int          `json:"nb_damage"`
+	Tenant    string       `json:"tenant"`
+	StartDate *db.DateTime `json:"start_date"`
+	EndDate   *db.DateTime `json:"end_date"`
+
+	Rooms []roomResponse `json:"rooms"`
+}
+
+type roomResponse struct {
+	ID       string `json:"id"`
+	Name     string `json:"name"`
+	Archived bool   `json:"archived"`
+
+	Furnitures []furnitureResponse `json:"furnitures"`
+}
+
+type furnitureResponse struct {
+	ID       string `json:"id"`
+	Name     string `json:"name"`
+	Quantity int    `json:"quantity"`
+	Archived bool   `json:"archived"`
+}
+
+func (p *PropertyInventoryResponse) FromDbProperty(model db.PropertyModel) {
+	p.ID = model.ID
+	p.OwnerID = model.OwnerID
+	p.PictureID = model.InnerProperty.PictureID
+	p.Name = model.Name
+	p.Address = model.Address
+	p.City = model.City
+	p.PostalCode = model.PostalCode
+	p.Country = model.Country
+	p.AreaSqm = model.AreaSqm
+	p.RentalPricePerMonth = model.RentalPricePerMonth
+	p.DepositPrice = model.DepositPrice
+	p.CreatedAt = model.CreatedAt
+	p.Archived = model.Archived
+
+	p.NbDamage = utils.CountIf(model.Damages(), func(x db.DamageModel) bool { return x.InnerDamage.FixedAt == nil })
+
+	activeIndex := slices.IndexFunc(model.Contracts(), func(x db.ContractModel) bool { return x.Active })
+	if activeIndex != -1 {
+		active := model.Contracts()[activeIndex]
+
+		p.Status = "unavailable"
+		p.Tenant = active.Tenant().Firstname + " " + active.Tenant().Lastname
+		p.StartDate = &active.StartDate
+		p.EndDate = active.InnerContract.EndDate
+	} else {
+		p.Status = "available"
+		p.Tenant = ""
+		p.StartDate = nil
+		p.EndDate = nil
+	}
+
+	p.Rooms = make([]roomResponse, len(model.Rooms()))
+	for i, room := range model.Rooms() {
+		p.Rooms[i].ID = room.ID
+		p.Rooms[i].Name = room.Name
+		p.Rooms[i].Archived = room.Archived
+
+		p.Rooms[i].Furnitures = make([]furnitureResponse, len(room.Furnitures()))
+		for j, furniture := range room.Furnitures() {
+			p.Rooms[i].Furnitures[j].ID = furniture.ID
+			p.Rooms[i].Furnitures[j].Name = furniture.Name
+			p.Rooms[i].Furnitures[j].Quantity = furniture.Quantity
+			p.Rooms[i].Furnitures[j].Archived = furniture.Archived
+		}
+	}
+}
+
+func DbPropertyInventoryToResponse(pc db.PropertyModel) PropertyInventoryResponse {
+	var resp PropertyInventoryResponse
+	resp.FromDbProperty(pc)
+	return resp
+}
