# Code/Server/router/router.go
@@ -73,6 +73,7 @@ func registerOwnerRoutes(owner *gin.RouterGroup) {
 			propertyId.Use(middlewares.CheckPropertyOwnership("property_id"))
 			propertyId.GET("/", controllers.GetPropertyById)
 			propertyId.DELETE("/", controllers.ArchiveProperty)
+			propertyId.GET("/inventory/", controllers.GetPropertyInventory)
 			propertyId.GET("/picture/", controllers.GetPropertyPicture)
 			propertyId.PUT("/picture/", controllers.UpdatePropertyPicture)
 
